--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "meilisearch/meilisearch-php": "^1.7",
+        "pusher/pusher-php-server": "^7.2",
         "spatie/laravel-permission": "^6.7"
     },
     "require-dev": {
